# sentry-audit

./: .env.example  GRANT_PROPOSAL.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: audit.py  health.py  report.py
backend/app/core/: cache.py  database.py
backend/app/models/: __init__.py  audit.py  report.py  vulnerability.py
backend/app/schemas/: __init__.py  audit.py  report.py
backend/app/services/: __init__.py  gas_analyzer.py  report_generator.py
backend/app/services/ai/: __init__.py  prompt_templates.py  reasoning_engine.py
backend/app/services/analyzers/: __init__.py  static_analyzer.py
backend/app/services/detectors/: __init__.py  access_control_detector.py  base_detector.py  integer_overflow_detector.py  reentrancy_detector.py  tx_origin_detector.py  unchecked_call_detector.py
backend/app/utils/: ast_utils.py  file_utils.py  scoring.py
examples/: vulnerable_contract_1.sol  vulnerable_contract_2.sol
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/common/: ShieldLogo.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: AuditPage.tsx  HistoryPage.tsx  HomePage.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: auditStore.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
